# velocitypay

./: .gitignore  ARCHITECTURE.md  AUDIT_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  DEV_SETUP.md  FIXES_APPLIED.md  README.md  SECURITY.md  TESTING.md  code audit.txt  gitignore  setup-dev-db.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: index.html
velo-chain/: BUILD.md  Cargo.toml  NODE-MANAGEMENT-README.md  TESTING.md  WORKING-SETUP-GUIDE.md  alice-peer-id.txt  check-network-status.bat  generate-spec.bat  inspect-node-keys.bat  quick-start.bat  reset-testnet.bat  run-alice-final.bat  run-alice.bat  run-bob-final.bat  run-bob.bat  setup-node-keys-v2.bat  start-local.bat  test-chain.py  test-rpc.bat  velo-chain-README.md
velo-chain/.cargo/: config.toml
velo-chain/node/: Cargo.toml
velo-chain/node-keys/: alice-node-key  bob-node-key
velo-chain/node/src/: chain_spec.rs  main.rs  rpc.rs  service.rs
velo-chain/pallets/compliance/: Cargo.toml
velo-chain/pallets/compliance/src/: lib.rs
velo-chain/pallets/kyc/src/: lib.rs
velo-chain/pallets/velopay/: Cargo.toml
velo-chain/pallets/velopay/src/: lib.rs  weights.rs
velo-chain/runtime/: Cargo.toml
velo-chain/runtime/src/: lib.rs
velocity-chain/: .gitignore  BUILD.md  CUSTOM-FRONTEND.md  Cargo.toml  TESTING.md  WINDOWS-BUILD-GUIDE.md  build-windows.bat  check-all.bat  check-node.bat  generate-spec.bat  quick-start.bat  run-alice.bat  run-bob.bat  run-dev.bat  start-dev.bat  start-local.bat  test-rpc.bat
velocity-chain/.cargo/: config.toml
velocity-chain/node/: Cargo.toml
velocity-chain/node/src/: chain_spec.rs  main.rs  rpc.rs  service.rs
velocity-chain/pallets/compliance/src/: lib.rs
velocity-chain/pallets/kyc/: Cargo.toml
velocity-chain/pallets/kyc/src/: lib.rs
velocity-chain/pallets/velocitypay/: Cargo.toml
velocity-chain/pallets/velocitypay/src/: lib.rs  types.rs
velocity-chain/runtime/: Cargo.toml
velocity-chain/runtime/src/: lib.rs
velocitypay-api/: .env  .env.example  Cargo.toml
velocitypay-api/migrations/: 001_init.sql
velocitypay-api/src/: config.rs  main.rs
velocitypay-api/src/models/: burn_request.rs  kyc.rs  mint_request.rs  mod.rs  response.rs  transaction.rs
velocitypay-api/src/routes/: auth_routes.rs  mint_routes.rs  mod.rs
velocitypay-api/src/services/: auth_service.rs  burn_service.rs  mint_service.rs  payment_service.rs
velopay-api/: .env.example  BUILD_WINDOWS.md  Cargo.toml  README.md  RELEASE_NOTES.md  build.bat  build.ps1  generate-metadata.bat  metadata.scale  reset-db.bat  velopay-api-README.md
velopay-api/.sqlx/: query-02e0f475f1aa520d95b40355fc229a0fcbb7e33175c13ba04d0538aa5af2b383.json  query-0ffe759437924f626a713839b58e459b253ea90ed9fefe22bcae0fef43561f72.json  query-1940e2f7f6987f88e1552c6bc864f95ab8b34428d61ae81376400e00cb574c2d.json  query-2be2005896f8722ad2b3ad2fb01356f876cfac4ba34d5f33cd64df9c1c1b5501.json  query-2ede10d8c1be832683f687cbce8e05361a15d0e7ca2aa8c57cb55be6a7d75f55.json  query-406fc09e143f0fb1df151686abffedd530175e49ad8887f1011adebe35f14939.json  query-435ff4c67dd344868780fecf2c30bc5abe878615594e944ac4674cf840d01479.json  query-4b7a60ba10a8a6da44e9ade26ddf2534c3e4b75f9d9cca45436db36238dc2940.json  query-563ec8186eae98e3199e4faee5f59e0fc2b2475facddf87bd4b4dd36fda808b6.json  query-5719903c90548aa6b1e1c172d15223dbdb082809a8c377c044d80ebbb6464873.json  query-65dd30ffaaebb22cc6ba1f6649dec967f0472ea03224345521ebe2c8f866290c.json  query-66d3565f34ea3d737f23f16e60972171d884a8b328260c67785493b85b9c9ef5.json  query-6d4f5d4e5e8c5c2f38aa677267abcd28f45f8a7cee0c54c6831927244badac2e.json  query-6e40e3d4b22650cbd0d73ac1c7796aea66c77bb95ecd6889f96af40827d9010b.json  query-70d81c77286243b04181c64a9eacddc850e72803cd893a64fbc6bd761dbe6ca9.json  query-80e6cc65ad17c6c5a158eed471ece3fea20ec82e46490fa7de4423f0cad30ddb.json  query-85eb2a5bad968235e5b8cc168893d47187915b9cbf0cc9bbe7d4bc06d5bd2de1.json  query-8899ff5c1eb1ff621d5c427bc5e93e9dc8d0e5dd1b3f63a9012519a471bbac27.json  query-96448c934443184b13bc4cc2cb55216642b519b489e87e17ffe8819829e664fd.json  query-a7dd8cbdd6a55491b59d14da787053cbfa4219d87f718924d0cc8ca7672074d3.json  query-b1bdf9011d0913a01e150015d221f297706eaab0ae1dd9266602b41ecbfe5a2f.json  query-bb4963e21b5d6ae42462727ef0e7907a5094cc36c725684f57b88f5a1c63a925.json  query-befff6487d7e18f66e2e00e9ebaead5f5fb3a369676732e23b25a36a57022986.json  query-c7b780c2f17289d4068924b7abd505a6473342f4d8ed5f848792f495b247b247.json  query-cc252aebfcd2e8d353f5be18fe8d0e1059b9f1de09dcc8faaeb086294ff6211e.json  query-de57b4cfd52b1fe147b953c91fbb158ebd05b51fb8d8bb169152ce34be73c8c7.json  query-ee08484ef47051e92b2c69ee738bc22d9b0a5e3f93392091a1082550e801c281.json  query-eee86d35b1c691b16f3cee00afa9dbee83e8beaf2757221d6953d9bdc529627d.json  query-fafd1846da4e8c295da78cb8175ecf3b487a5ec6ba7d4f9a29fae3c01358b4fc.json
velopay-api/migrations/: 001_init.sql  20241120000001_initial_schema.sql
velopay-api/src/: api-files.txt  config.rs  main.rs  utils.rs
velopay-api/src/chain/: client.rs  mod.rs  operations.rs
velopay-api/src/db/: burn_repository.rs  burn_request_repository.rs  kyc_repository.rs  mint_repository.rs  mint_request_repository.rs  mod.rs  transaction_repository.rs  user_repository.rs
velopay-api/src/middleware/: admin.rs  auth.rs  mod.rs
velopay-api/src/models/: burn_request.rs  kyc.rs  mint_request.rs  mod.rs  transaction.rs  user.rs
velopay-api/src/routes/: admin_routes.rs  auth_routes.rs  burn_routes.rs  kyc_routes.rs  mint_routes.rs  mod.rs  payment_routes.rs
velopay-api/src/services/: auth_service.rs  burn_service.rs  kyc_service.rs  mint_service.rs  mod.rs  payment_service.rs
velopay-web/: eslint.config.js  package.json  playwright.config.ts  svelte.config.js  tailwind.config.js
velopay-web/e2e/: explorer-verification.spec.ts
velopay-web/src/: app.css
velopay-web/src/lib/components/: ThemeToggle.svelte
velopay-web/src/lib/explorer/api/: chainApi.js
velopay-web/src/routes/: +layout.svelte  +page.svelte
velopay-web/src/routes/explorer/: +page.svelte
(+5 files in other folders)
