[workspace]
members = [
    "node",
    "runtime",
    "pallets/velopay",
    "pallets/kyc",
    "pallets/compliance",
]
resolver = "2"

[workspace.package]
authors = ["ChronoCoders"]
edition = "2021"
repository = "https://github.com/ChronoCoders/velopay"
license = "Apache-2.0"

[workspace.dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = ["derive"] }
scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.188", default-features = false, features = ["derive", "alloc"] }
frame-benchmarking = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
frame-executive = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
frame-support = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
frame-system = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
frame-system-benchmarking = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
frame-system-rpc-runtime-api = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
frame-try-runtime = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
pallet-aura = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
pallet-balances = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
pallet-grandpa = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
pallet-sudo = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
pallet-timestamp = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
pallet-transaction-payment = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
pallet-transaction-payment-rpc-runtime-api = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
pallet-multisig = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
pallet-utility = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
sp-api = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
sp-block-builder = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
sp-consensus-aura = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
sp-consensus-grandpa = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
sp-core = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
sp-inherents = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
sp-io = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
sp-offchain = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
sp-session = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
sp-std = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
sp-transaction-pool = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
sp-version = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }
sp-genesis-builder = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407" }

[profile.release]
panic = "unwind"
