[package]
name = "velopay-api"
version = "1.0.0"
edition = "2021"
authors = ["VeloPay Team"]

[dependencies]
actix-web = "4.4"
actix-cors = "0.7"
actix-rt = "2.9"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
env_logger = "0.11"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9.2"
bcrypt = "0.15"
uuid = { version = "1.6", features = ["v4", "serde"] }
validator = { version = "0.16", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"

subxt = "0.32"
sp-core = "21.0"
sp-runtime = "24.0"
sp-keyring = "24.0"

sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "migrate", "rust_decimal"] }
deadpool-postgres = "0.12"
rust_decimal = { version = "1.33", features = ["serde", "db-postgres"] }

reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
async-trait = "0.1"

actix-governor = "0.5"
governor = "0.6"
